Can detect and launch AppImages - version detection and resume game not yet functional. Can detect and launch FlatPaks.