@@ -7,6 +7,8 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import org.apache.commons.io.FileUtils;
 import org.apache.logging.log4j.LogManager;
@@ -30,7 +32,7 @@ public class HttpUtil {
      * @param file where to store the data
      * @throws IOException something went wrong
      */
-    public static void downloadUrl(URL url, File file) throws IOException {
+    public static void downloadUrl(URL url, File file) throws IOException, URISyntaxException {
         log.debug("downloadUrl({}, {})", url, file);
         
         HttpURLConnection conn = (HttpURLConnection)url.openConnection();
@@ -41,7 +43,7 @@ public class HttpUtil {
         
         while (status != HttpURLConnection.HTTP_OK) {
             String newUrl = conn.getHeaderField("Location");
-            conn = (HttpURLConnection)new URL(newUrl).openConnection();
+            conn = (HttpURLConnection)new URI(newUrl).toURL().openConnection();
             conn.setReadTimeout(5000);
             status = conn.getResponseCode();
             log.info("HTTP status for {}: {}", newUrl, status);
